<resources>
    <string name="app_name">Polisapp</string>
    <string name="logInText">Scan your NFC-card <br/> \n and enter your pin-password to log in</string>
    <string name="loginScannedCard">NFC-card scanned, write password <br/> \n</string>
    <string name="loginPasswordReady">Password written, scan NFC-card</string>
    <string name="loginReady">Press login</string>
    <string name="logInButton">Log in</string>
    <string name="authentication">Authentication</string>
    <string name="passwordEditText">Password</string>
    <string name="contactsAndMessagesButton">Contacts and Messages</string>
    <string name="mapsButton">Maps</string>
    <string name="callButton">Call</string>
    <string name="newsfeedButton">Newsfeed</string>
    <string name="updateButton">Update</string>
    <string name="reportButton">Report</string>
    <string name="logOutButton">Log Out</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_report_window">ReportWindowActivity</string>
    <string name="call">Call</string>
    <string name="start_call_activity">Start Maps Acivity</string>
</resources>
