<?xml version = "1.0" encoding = "utf-8"?>
<RelativeLayout xmlns:android = "http://schemas.android.com/apk/res/android"
xmlns:tools = "http://schemas.android.com/tools" android:layout_width="match_parent"
android:layout_height = "match_parent" android:paddingLeft= "@dimen/activity_horizontal_margin"
android:paddingRight = "@dimen/activity_horizontal_margin"
android:paddingTop = "@dimen/activity_vertical_margin"
android:paddingBottom = "@dimen/activity_vertical_margin" tools:context = ".MainActivity">


    <TextView
        android:id="@+id/logInText"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginTop="43dp"
        android:text="@string/logInText"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/passwordEditText"
        android:textAlignment="center"
        android:inputType="numberPassword"
        android:maxLength="4"
        android:layout_below="@+id/logInText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp" />

    <Button
        android:id="@+id/logInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/logInButton" />

    <Button
        android:id="@+id/startCallActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logInButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/start_call_activity" />

    <Button
        android:id="@+id/fastloginsuperbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/startCallActivity"
        android:layout_centerHorizontal="true"
        android:text="Fast Login SuperUser" />

    <Button
        android:id="@+id/fastloginbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/startCallActivity"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="51dp"
        android:text="Fast Login Regular User" />


</RelativeLayout>