<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <Button
        android:id="@+id/callButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/mapsButton"
        android:layout_below="@+id/mapsButton"
        android:layout_marginTop="39dp"
        android:minWidth="200dp"
        android:text="@string/callButton" />

    <Button
        android:id="@+id/mapsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/contactsButton"
        android:layout_below="@+id/contactsButton"
        android:layout_marginTop="34dp"
        android:minWidth="200dp"
        android:text="@string/mapsButton" />

    <Button
        android:id="@+id/contactsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:minWidth="200dp"
        android:text="@string/contactsAndMessagesButton" />

    <Button
        android:id="@+id/logOutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/callButton"
        android:layout_below="@+id/callButton"
        android:layout_marginTop="48dp"
        android:minWidth="200dp"
        android:text="@string/logOutButton" />

    <TextView
        android:id="@+id/currentBatteryTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logOutButton"
        android:layout_marginEnd="11dp"
        android:layout_marginTop="11dp"
        android:layout_toStartOf="@+id/changeBatterytoGoodButton"
        android:text="Nuvarande batteri: 50%" />

    <Button
        android:id="@+id/changeBatterytoGoodButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/eftersomTV"
        android:layout_marginEnd="74dp"
        android:layout_marginTop="31dp"
        android:text="Bra batteri" />

    <Button
        android:id="@+id/changeBatterytoLowButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/changeBatterytoGoodButton"
        android:layout_alignBottom="@+id/changeBatterytoGoodButton"
        android:layout_alignEnd="@+id/currentBatteryTV"
        android:text="Låg Batteri" />

    <TextView
        android:id="@+id/currentbatteryLimitTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/currentBatteryTV"
        android:layout_below="@+id/currentBatteryTV"
        android:text="Låg Batteri gräns: 10%" />

    <TextView
        android:id="@+id/eftersomTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/currentbatteryLimitTV"
        android:layout_below="@+id/currentbatteryLimitTV"
        android:text="Batteri är bra eftersom 50% > 10%" />


</RelativeLayout>